[package]
name = "layer-shika"
version = "0.1.0"
edition = "2021"
description = "A layer shell library crate with Slint UI"
license = "MIT OR Apache-2.0"
repository = "https://codeberg.org/drendog/layer-shika"
readme = "README.md"
keywords = [
    "layer-shell",
    "wayland",
    "slint",
    "layer",
    "shell",
    "gui",
    "ui",
    "compositor",
    "femtovg",
    "smithay",
    "wlroots",
    "sway",
]
categories = ["gui", "compositor"]

[lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
clone_on_ref_ptr = "warn"
multiple-crate-versions = "allow"
module_name_repetitions = "allow"
unwrap_used = "warn"

[dependencies]
glutin = { version = "0.32.0", default-features = false, features = [
    "wayland",
] }
log = "0.4.22"
raw-window-handle = "0.6.2"
slint = { version = "1.7.2", default-features = false, features = [
    "compat-1-2",
    "renderer-femtovg",
] }
slint-interpreter = "1.7.2"
smithay-client-toolkit = "0.19.2"
thiserror = "1.0.63"
wayland-client = "0.31.5"
